(add new changes on top of this file)

Änderungen
----------

v0.13.7 (??.03.2014) (not released)
 * Better localization support. Thanks to Hannes Bochmann!

v0.13.6 (10.02.2014) (not released)
 * Default dummy button in BE module
 * Substitution cache in marker classes disabled by default. Thanks to Michael Wagner!

v0.13.5 (28.11.2013) (not released)
 * Exception handling is now configurable by custom handler classes. Thanks to Hannes Bochmann!

v0.13.4 (19.11.2013) (not released)
 * util_Template::substMarkerArrayCached() with better caching. Thanks to Hannes Bochmann!

v0.13.3 (05.11.2013)
 * Warning mail address from TYPO3 is not used for error mails anymore.
 * util_Files::getFileResource() supports FAL references
 * view_Base works with file references from flexform in TYPO3 6.1
 * tx_rnbase_configurations: Even better support for references. Thanks to Michael Wagner!
 * util_Files: New method cleanupFileNames(). Thanks to dMK!

v0.13.2 (27.06.2013) (not released)
 * SimpleMarker supports dynamic subpart-markers configured by typoscript. Thanks to Michael Wagner!
 * util_DB::doSelect: Automatic translation of selected records.
 * util_Link: Bugfix for external URIs
 * New method util_FormUtil::getHiddenFieldsForUrlParams(). Thanks to Michael Wagner!

v0.13.1 (03.06.2013) (not released)
 * Support for unique plugin parameters. Simple enabled by TS: plugin.tx_myplugin.uniqueParameters = 1
 * tx_rnbase_model_base implements interface tx_rnbase_IModel

v0.13.0 (01.06.2013)
 * Bugfix for pagebrowser. Thanks to Hannes Bochmann!
 * BE-Modules: Generic sorting in tables. Thanks to Hannes Bochmann and Thomas Reuleke!
 * BE-Modules: Some changes in base_Lister. Thanks to Thomas Reuleke!
 * TYPO3 dependency for TER added
 * Initial implementation for FAL support in TYPO3 6.0
 * tx_rnbase_util_DB: update for TYPO3 6.1
 * Link creation optimized. No cHash per default for plugins in USER_INT mode.

v0.12.4 (14.03.2013) (not released)