@@ -5,6 +5,7 @@
 
 v0.13.7 (??.03.2014) (not released)
  * Better localization support. Thanks to Hannes Bochmann!
+ * New TS-Option links.linkid.applyHtmlSpecialChars to mask special characters. Default is false. Thanks to Michael Wagner!
 
 v0.13.6 (10.02.2014) (not released)
  * Default dummy button in BE module
